--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                 <a href="https://github.com/DamnDanielV/InfiNote"><h3>InfiNote</h3></a>
                 <img src="./static/img/infini.png" alt="">
             <div class="projectBx">
-                <h3>ShopMern</h3>
+                <a href="https://github.com/DamnDanielV/ShopMern"><h3>ShopMern</h3></a>
+
                 <img src="./static/img/shopmern.png" alt="">
             </div>
         </div>
