--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="contenBx w50">
                 <h3>Desarrollador Web Backend Javascript</h3>
                 <br>
-                <p>Soy una persona apasionada acerca de las tecnologias web, he decidido cambiar de rumbo y dedicarme a lo que me apasiona, el desarrollo, actualmente soy cazarrecompensa de errores de aplicativos web en la plataforma HackerOne
-                    en lo cual exploto una de mis mayores virtudes, la curiosidad, el saber el porqué de las cosas. En desarrollo me enfoco principalmente en el Backend con Javascript y su runtime del lado del servidor NodeJs, sin embargo tengo conocimiento 
-                    en el frontend con React y algo de Angular. Asi como manejo de bases de datos y servicios RestFull. 
+                <p>Soy una persona apasionada acerca de las tecnologias web, he decidido cambiar de rumbo y dedicarme a lo que me apasiona, el desarrollo, actualmente soy cazarrecompensa de errores en la plataforma HackerOne donde tengo por mision contribuir en hacer de la web un lugar mas seguro,
+                    en lo cual exploto una de mis mayores virtudes, la curiosidad y la perseverancia. En desarrollo me enfoco principalmente en el Backend con Javascript y su runtime del lado del servidor NodeJs, sin embargo tengo conocimiento 
+                    en otros frameworks y lenguajes, los cuales he aprendido de forma autodidacta.
                     
                     <br>
                 </p>
@@ -63,32 +63,29 @@
                 <p>Javascript es mi lenguaje favorito Callback Hell?! No!... Callback Love!<br> Estoy enfocado en el mern stack <br> MongoDb<br>Express<br>React<br>NodeJs</p>
             </div>
             <div class="servicesBx">
-                <img src="./static/img/angular.png" alt="">
-                <h2>Angular</h2>
-                <p>Si, sé algo de angular, aunque prefiero React, lo siento por Angular</p>
+                <img src="./static/img/1280px-Node.js_logo.svg.png" alt="">
+                <h2>NodeJs</h2>
+                <p>Mi fuerte es el desarrollo del lado del servidor con nodeJs y la seguridad informatica</p>
             </div>
             <div class="servicesBx">
                 <img src="./static/img/django.png" alt="">
                 <h2>Django</h2>
-                <p>Python... Python mi viejo amigo</p>
+                <p>Redes neuronales fue mi punto de entrada al lenguaje Python. Actualmente deseo enfocarlo al desarrollo web</p>
             </div>
-            <div class="servicesBx">
-                <img src="./static/img/OWASP.png" alt="">
-                <h2>What?!</h2>
-                <br>
-                <p>Open Web Application Security Project <br> Herramientas muy cool para seguridad de aplicativos web, Que viva el codigo abierto! </p>
-            </div>
+            
             <div class="servicesBx">
                 <img src="./static/img/DBre.png" alt="">
                 <h2>Bases de datos</h2>
-                <p>El futuro está en los datos! <br>MySql, Postgresql, MongoDb<br>Y las que falta por aprender...</p>
+                <p><br>MySql, Postgresql, MongoDb<br>Y las que falta por aprender...</p>
             </div>
             <div class="servicesBx">
-                <img src="./static/img/git.png" alt="">
-                <h2>Git</h2>
-                <br>
-                <br>
-                <p>Qué sería de nosotros sin el control de versiones y el trabajo en equipo?...</p>
+                <img src="./static/img/kisspng-web-development-service-benzylpenicilloyl-polylysi-allergy-5acc8d3e9c9a31.6944386415233549426415.png" alt="">
+                <h2>Otras herramientas</h2>
+                <br>Git
+                <br>Linux
+                <br>Docker
+                <br>RestFull
+                <p></s></p>
             </div>
         </div>
     </section>
