--- a/index.html
+++ b/index.html
@@ -6,39 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
-        <a href="" class="logo">Portafolio</a>
+        <a href="" class="logo">Portfolio</a>
         <div class="toggle">
         </div>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">Acerca</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#stack">Stack</a></li>
-            <li><a href="#projects">Proyectos</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contacto">Contact</a></li>
         </ul>
     </header>
     <section class="banner" id="home">
         <div class="textBx">
-            <h2>Hola, <br><span>soy Daniel Villalba</span></h2>
+            <h2>Hi, <br><span>I'm Daniel Villalba</span></h2>
             <h3>Backend Web Developer</h3>
-            <a href="#about" class="boton">Acerca de mi</a>
+            <a href="#about" class="boton">About me</a>
         </div>
     </section>
     <section class="about" id="about">
         <div class="heading">
-            <h2>Acerca de mi</h2>
+            <h2>About me</h2>
         </div>
         <div class="content">
             <div class="contenBx w50">
-                <h3>Desarrollador Web Backend Javascript</h3>
+                <h3>Junior Backend Developer</h3>
                 <br>
-                <p>Soy una persona apasionada acerca de las tecnologias web, he decidido cambiar de rumbo y dedicarme a lo que me apasiona, el desarrollo, actualmente soy cazarrecompensa de errores en la plataforma HackerOne donde tengo por mision contribuir en hacer de la web un lugar mas seguro,
-                    en lo cual exploto una de mis mayores virtudes, la curiosidad y la perseverancia. En desarrollo me enfoco principalmente en el Backend con Javascript y su runtime del lado del servidor NodeJs, sin embargo tengo conocimiento 
-                    en otros frameworks y lenguajes, los cuales he aprendido de forma autodidacta.
+                <p>I am a curious person, who enjoys having challenging days, and although I know that there is much to learn in this world of development, when something is done out of passion and love, everything flows, I believe that with my skills, teamwork, curiosity and always ask ¿why? Any challenge can be overcome, and my current challenge is learn more and more and to apply and share what I have learned in this time about security and development.
                     
                     <br>
                 </p>
@@ -51,7 +49,7 @@
     </section>
     <section class="stack" id="stack">
         <div class="heading white">
-            <h2>Stack tecnológico</h2>
+            <h2>Stack</h2>
             <p>Owasp, backend, frontend</p>
         </div>
         <div class="content">
@@ -60,29 +58,30 @@
                 <!-- <img src="./static/img/django.png" alt=""> -->
 
                 <h2>MERN</h2>
-                <p>Javascript es mi lenguaje favorito Callback Hell?! No!... Callback Love!<br> Estoy enfocado en el mern stack <br> MongoDb<br>Express<br>React<br>NodeJs</p>
+                <p>Callback Hell?! No!... Callback Love!<br> More focused in MERN stack <br> MongoDb<br>Express<br>React<br>NodeJs</p>
             </div>
             <div class="servicesBx">
                 <img src="./static/img/1280px-Node.js_logo.svg.png" alt="">
                 <h2>NodeJs</h2>
-                <p>Mi fuerte es el desarrollo del lado del servidor con nodeJs y la seguridad informatica</p>
+                <p>NodeJs is my strong suit</p>
             </div>
             <div class="servicesBx">
                 <img src="./static/img/django.png" alt="">
                 <h2>Django</h2>
-                <p>Redes neuronales fue mi punto de entrada al lenguaje Python. Actualmente deseo enfocarlo al desarrollo web</p>
+                <p>Neural networks was my entry point to the Python language. Currently I want to focus on web development</p>
             </div>
             
             <div class="servicesBx">
                 <img src="./static/img/DBre.png" alt="">
-                <h2>Bases de datos</h2>
-                <p><br>MySql, Postgresql, MongoDb<br>Y las que falta por aprender...</p>
+                <h2>Databases</h2>
+                <p><br>MySql, Postgresql, MongoDb<br>And what remains to be learned...</p>
             </div>
             <div class="servicesBx">
                 <img src="./static/img/kisspng-web-development-service-benzylpenicilloyl-polylysi-allergy-5acc8d3e9c9a31.6944386415233549426415.png" alt="">
-                <h2>Otras herramientas</h2>
+                <h2>Others tools</h2>
                 <br>Git
                 <br>Linux
+                <br>Firebase, Digital Ocean
                 <br>Docker
                 <br>RestFull
                 <p></s></p>
@@ -91,8 +90,8 @@
     </section>
     <section class="projects" id="projects">
         <div class="heading">
-            <h2>Proyectos</h2>
-            <p>He realizado algunos proyectos poniendo en practica el proceso para la implementación de una propuesta desde la planeación, hasta el despliegue pasando por el desarrollo del aplicativo del lado del cliente asi como del lado del servidor y la comunicacion de ambos por medio de servicios RestApi </p>
+            <h2>Projects</h2>
+            <p>I have carried out some projects putting into practice the process for the implementation of a proposal from planning, to deployment, through the development of the application on the client side as well as on the server side and the communication of both through RestFull services without leaving aside the security of the application</p>
         </div>
         <div class="content">
             <div class="projectBx">
@@ -105,23 +104,23 @@
             </div>
         </div>
         <div class="heading">
-            <a href="https://github.com/DamnDanielV" class="boton"> Ver mas</a>
+            <a href="https://github.com/DamnDanielV" class="boton"> See More</a>
         </div>
     </section>
     <section class="contacto" id="contacto">
         <div class="heading white">
-            <h2>Contacto</h2>
+            <h2>Contact</h2>
         </div>
         <div class="content>
             <div class="infoContact">
-                <h3>Contacto Info</h3>
+                <h3>Info</h3>
                 <div class="infoBx">
                     <div class="box">
                         <div class="icon">
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="text">
-                            <h3>Dirección</h3>
+                            <h3>Address</h3>
                             <p>Medellín, Colombia</p>
                         </div>
                     </div>
@@ -130,7 +129,7 @@
                             <i class="fas fa-phone-square-alt"></i>
                         </div>
                         <div class="text">
-                            <h3>Telefono</h3>
+                            <h3>Phone</h3>
                             <p>3102976301</p>
                         </div>
                     </div>
